[project]
name = "advent-of-code-2021"
version = "0.1.0"
description = "Code to hold solutions and exploration for AoC 2021"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.2.2",
    "ruff>=0.9.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
quote-style = "single"